<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Home screen-->
    <string name="countdown_startbtn">Click to begin countdown</string>
    <string name="countdown_resetbtn">Click to reset countdown</string>
    <string name="countdown">3.0</string>
    <string name="cameraanalyzer_startbtn">Click to start Camera Analyzer</string>

    <!--Activity main-->
    <string name="xgyro">x gyroscope</string>
    <string name="ygyro">y gyroscope</string>
    <string name="zgyro">z gyro</string>
    <string name="xlinacc">x linear acc</string>
    <string name="ylinacc">y linear acc</string>
    <string name="zlinacc">z linear acc</string>
    <string name="prayermotion">Prayer motion goes here</string>
    <string name="stopdatacollection">Stop data collection</string>
    <string name="startdatacollection">Start data collection</string>
    <string name="resetgraph">Reset graph data</string>
    <string name="deleteCurrentData">Delete Current Data</string>
    <string name="pocketSide">Side</string>
    <string name="phoneElevation">Elevation</string>
    <string name="phonePlacement">l</string>


    <!--Registration page-->
    <string name="register_page">Register Below 😄</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="height">Height</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="registerbtn">Register</string>
    <string name="login_page_rd">Back to login</string>

    <!--Login page-->
    <string name="login_page">Login Below 😄</string>
    <string name="loginbtn">Log in</string>
    <string name="register_page_rd">Register here</string>
    <string name="or">OR</string>
    <string name="read_data_btn">Read Data</string>
    <string name="delete_data_btn">Delete Data</string>



</resources>